- Fixs for backup hostingspace - With thanks to Centron GmbH
- Upgraded to letsencrypt-win-simple v1.9.7.2
- Fixed LetsEncrypt 0.0.0.0 bindings issue.
- LetsEncrypt Import certificate fixed.
- LetsEncrypt Success and Failure text fixed.
- LetsEncrypt renew screen fixed on success.
- Added Domain deletion confirmation.
- Fixed IDN Domains (regex / ASCII conversion).

Version 1.3.0:
- Changed all Int16 to Int32 due to issues with Int16 values
- RDS is now made for multiple RDSGateway servers in different domains
- RDS Added option in hosting plan to prevent user from adding new RDSServer to HostedOrg
- HyperV: Changed group name from Virtual Private Servers 2012 to HyperV
- HyperV: Added 2016 provider so we can add features in the future for this version
- HyperV: Fixed Replications page
- Instant Alias fixed
- Instant Alias Renamed to Preview Domain
- Added Preview Domain checkbox on Domain creation
- Search box improved with advanced search drop down
- Search box fixed up to html5 on all pages
- Smartermail 10+ bug fixes 
- Smartermail 10+ gui design fixes
- Smartermail 10+ tested with v16
- Exchange 2013/2016 Distribution boxes allowed in mailbox priveledges
- Exchange 2013/2016 Root public folder fix (permission and mailenabled disabled)
- Hosted Organization Delete User button fix (first load issue)
- Hosting Plan only displays available services
- Space Item button fix
- Small Website fixes
- SolidCP Portal, Enterprise and Installer pushed to asp.net v4.5
- NuGet packages updated to latest version / correct framework.
- Whoisclient updated to v3
- AnyCPU + Optimize code set on all projects
- LetsEncrypt added for IIS 7 , 8 and 10
- Changes to log error service id for bandwidth task when error is caused

Version 1.2.1:
- Proxmox - With thanks to Centron GmbH
- Guacamole for VPS2012 - With thanks to Centron GmbH
- Enter key can be used in the global search field now