@@ -283,15 +283,6 @@ namespace SolidCP.Portal {
         protected global::AjaxControlToolkit.ModalPopupExtender modalPfxPass;
         
         /// <summary>
-        /// tabLEInstalled control.
-        /// </summary>
-        /// <remarks>
-        /// Auto-generated field.
-        /// To modify move field declaration from designer file to code-behind file.
-        /// </remarks>
-        protected global::AjaxControlToolkit.TabPanel tabLEInstalled;
-        
-        /// <summary>
         /// tabCSR control.
         /// </summary>
         /// <remarks>
